<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_audio_mixing_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_send_only"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/send_only"
        android:textColor="#ff3f3f3f"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_playout_only"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/playout_only"
        android:textColor="#ff3f3f3f"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_send_and_playout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/send_and_playout"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_replace_mic"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/replace_mic"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_replace_mic_and_send_only"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/replace_mic_and_send_only"
        android:textSize="16sp" />

    <View
        android:id="@+id/view_audio_mixing_mode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E2E2E2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E2E2E2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E2E2E2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E2E2E2" />

</LinearLayout>