<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_output_rotation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_degree0"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/degree0"
        android:textColor="#ff3f3f3f"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_degree90"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/degree90"
        android:textColor="#ff3f3f3f"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_degree180"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/degree180"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_degree270"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/degree270"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E2E2E2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E2E2E2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E2E2E2" />

    <View
        android:id="@+id/view_output_rotation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent" />

</LinearLayout>