<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_qua_uid"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLength="20"
            android:singleLine="true"
            android:text="@string/uid"
            android:textAllCaps="false"
            android:textColor="#fff000"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_qua_video_lost"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLength="20"
            android:singleLine="true"
            android:text="@string/video_bitrate"
            android:textColor="#ffff00"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_qua_audio_lost"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLength="20"
            android:singleLine="true"
            android:text="@string/audio_lost"
            android:textColor="#ffff00"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_qua_video_bitrate"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLength="20"
            android:singleLine="true"
            android:text="@string/video_bitrate"
            android:textColor="#ffff00"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_qua_audio_bitrate"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLength="20"
            android:singleLine="true"
            android:text="@string/audio_bitrate"
            android:textColor="#ffff00"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_qua_rtt"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLength="20"
            android:singleLine="true"
            android:text="RTT"
            android:textColor="#ffff00"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/tv_qua_fps"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLength="20"
            android:singleLine="true"
            android:text="@string/fps"
            android:textColor="#ffff00"
            android:textSize="9sp" />

    </LinearLayout>

</LinearLayout>