<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/view_touch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_disabled"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/degradation_disable"
        android:textColor="#ff3f3f3f"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E2E2E2" />

    <TextView
        android:id="@+id/tv_maintain_framerate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/degradation_maintain_framerate"
        android:textColor="#ff3f3f3f"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E2E2E2" />

    <TextView
        android:id="@+id/tv_maintain_resolution"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/degradation_maintain_resolution"
        android:textColor="#ff3f3f3f"
        android:textSize="16sp" />

</LinearLayout>