<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/btn_config_finish"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="#11CDA8"
            android:text="@string/ok"
            android:textColor="#fff"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bitrate"
                android:textColor="#ff3f3f3f"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_video_bitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="#ff3f3f3f" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fps"
                android:textColor="#ff3f3f3f"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_video_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="#ff3f3f3f" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution"
                android:textColor="#ff3f3f3f"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_video_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="#ff3f3f3f" />
        </FrameLayout>

        <SeekBar
            android:id="@+id/sk_video_resolution"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:max="100" />

        <SeekBar
            android:id="@+id/sk_video_fps"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:max="30" />

        <SeekBar
            android:id="@+id/sk_video_bitrate"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp" />
    </LinearLayout>

    <View
        android:id="@+id/view_touch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>